# EmaLang

./: Cargo.toml  readme.md
npm-dist/create-emalang/: index.js  package-lock.json  package.json
npm-dist/emalang/: index.js  package.json  readme.md
