[package]
name = "ema_compiler"
version = "0.1.0"
edition = "2026"
authors = ["aydocs"]
description = "EmaLang Bootstrap Compiler Frontend"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
rustyline = "12.0"
ureq = "3.2.0"
uuid = { version = "1.22.0", features = ["v4"] }
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "macros"] }
async-trait = "0.1.89"
wasm-encoder = "0.245.1"
leb128 = "0.2.5"
chrono = "0.4"
tower-http = { version = "0.5.0", features = ["cors"] }
